# lora_codec2

./: .gitmodules  CMakeLists.txt  gencodebooks.cmake  readme.md  stm32_flash.ld  stm32f4discovery.dia
Utilities/STM32F4-Discovery/: stm32f4_discovery_audio_codec.c  stm32f4_discovery_audio_codec.h
lora_codec2/: app_sx126x.c  main.c  main.h  microphone.c  radio.c  speaker.c
passthru/: microphone.c  passthru.c  passthru.h  speaker.c
pdm_fir/: LICENSE  README.md  pdm_fir.c  pdm_fir.h  pdm_fir.py
sx126x/: sx126x.c  sx12xx.h
sx12xx_hal/: radio.h  radio_sx126x.c
usb_conf/: usbd_usr.c
usb_lib/core/: usbd_core.c  usbd_req.c
usb_lib/otg/: usb_dcd_int.c
vocoder_passthru/: main.c  main.h  microphone.c  speaker.c
